@@ -202,6 +202,15 @@ class mod_minilesson_external extends external_api {
                 );
                 break;
 
+            case constants::TYPE_MULTIAUDIO:
+                $mform = new \mod_minilesson\local\rsquestion\multiaudioform(null,
+                        array('editoroptions'=>$editoroptions,
+                                'filemanageroptions'=>$filemanageroptions,
+                                'moduleinstance'=>$moduleinstance),
+                        $method, $target,$attributes,$editable,$data
+                );
+                break;
+
             case constants::TYPE_DICTATIONCHAT:
                 $mform = new \mod_minilesson\local\rsquestion\dictationchatform(null,
                         array('editoroptions'=>$editoroptions,
