@@ -43,10 +43,13 @@ class rsquestion_renderer extends \plugin_renderer_base {
         $output = $this->output->heading(get_string("whatdonow", "minilesson"), 3);
         $links = array();
 
-        $qtypes = [constants::TYPE_MULTICHOICE,constants::TYPE_DICTATIONCHAT,constants::TYPE_DICTATION,constants::TYPE_SPEECHCARDS,
-        constants::TYPE_LISTENREPEAT,constants::TYPE_PAGE];
-       // $qtypes[]=constants::TYPE_TEACHERTOOLS;
-       // $qtypes[]=constants::TYPE_SHORTANSWER;
+        $qtypes = [constants::TYPE_PAGE,constants::TYPE_MULTICHOICE, constants::TYPE_DICTATIONCHAT,
+                constants::TYPE_DICTATION,constants::TYPE_SPEECHCARDS, constants::TYPE_LISTENREPEAT];
+        if(isset($CFG->minilesson_experimental) &&$CFG->minilesson_experimental){
+           $qtypes[]=constants::TYPE_TEACHERTOOLS;
+           $qtypes[]=constants::TYPE_SHORTANSWER;
+           $qtypes[]= constants::TYPE_MULTIAUDIO;
+        }
         foreach($qtypes as $qtype){
             $url=
             $data=['wwwroot' => $CFG->wwwroot, 'type'=>$qtype,'itemid'=>$itemid,'cmid'=>$this->page->cm->id,
