@@ -1,0 +1,43 @@
+<div id="{{uniqueid}}_container" class="minilesson_questioncontainer" style="display: none">
+  {{> mod_minilesson/quiz_progress}}
+  <audio id="{{uniqueid}}_player"></audio>
+  <!-- @@CLOUDPOODLLTOKEN@@ -->
+  {{> mod_minilesson/questionheader}}
+
+  {{#customtext1}}
+  <div class="minilesson_mc_response" data-index="1" id="{{uniqueid}}_option1" name="{{uniqueid}}_options" >
+      {{customtext1}}
+      <i class="fa fa-check fa-lg minilesson_mc_right" style="display: none;"></i>
+      <i class="fa fa-times fa-lg minilesson_mc_wrong" style="display: none;"></i>
+  </div>
+  {{/customtext1}}
+
+    {{#customtext2}}
+    <div class="minilesson_mc_response" data-index="2" id="{{uniqueid}}_option2" name="{{uniqueid}}_options" >
+        {{customtext2}}
+        <i class="fa fa-check fa-lg minilesson_mc_right" style="display: none;"></i>
+        <i class="fa fa-times fa-lg minilesson_mc_wrong" style="display: none;"></i>
+    </div>
+   {{/customtext2}}
+
+    {{#customtext3}}
+        <div class="minilesson_mc_response" data-index="3" id="{{uniqueid}}_option3" name="{{uniqueid}}_options" >
+            {{customtext3}}
+            <i class="fa fa-check fa-lg minilesson_mc_right" style="display: none;"></i>
+            <i class="fa fa-times fa-lg minilesson_mc_wrong" style="display: none;"></i>
+        </div>
+    {{/customtext3}}
+
+    {{#customtext4}}
+    <div class="minilesson_mc_response" data-index="4" id="{{uniqueid}}_option4" name="{{uniqueid}}_options" >
+        {{customtext4}}
+        <i class="fa fa-check fa-lg minilesson_mc_right" style="display: none;"></i>
+        <i class="fa fa-times fa-lg minilesson_mc_wrong" style="display: none;"></i>
+    </div>
+    {{/customtext4}}
+
+    {{> mod_minilesson/cloudpushrecorder}}
+    {{> mod_minilesson/ttrecorder}}
+
+  {{> mod_minilesson/nextbutton}}
+</div>
