@@ -1,3 +1,6 @@
+- Added m4a file handler for audio
+- Added experimental config to make working with experimental types easier
+
 Version 1.0.16 (Build 2021033000)
 - fixed bug in backup/restore of user attempts
 - fixed bug in reset of user attempts
